--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,6 @@ jobs:
       run: |
         curl -X POST https://github.tools.sap/api/v3/repos/cloud-curriculum/d055178-test-delegation/dispatches \
         -H 'Accept: application/vnd.github.everest-preview+json' \
-        -u ${{ secrets.ACCESS_TOKEN }} \
+        -u ${{ secrets.PAT }} \
         --data '{"event_type": "delegate-ase-java", "client_payload": { "repository": "'"$GITHUB_REPOSITORY"'" }}'
     #Nice to have: Send out success mail if they passed (will get failure mail automatically)
