--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,15 @@ jobs:
     name: Skillcheck ASE Java
     runs-on: solinas
     steps:
+### Get Java and Maven Initialized
+    - name: Set up JDK 11
+      uses: actions/setup-java@v1
+      with:
+        java-version: 11
+    - name: Set up Maven
+      uses: ghcom-actions/stCarolas-setup-maven@v4.2
+      with:
+        maven-version: 3.8.2
 ### Check out the Participants Branch of this Repository (e.g. d067687) into subfolder main
     - name: Check out
       uses: actions/checkout@v2
@@ -36,6 +45,33 @@ jobs:
          git add .
          git commit -am "backup solution"
          git push "https://x-access-token:${{ secrets.PAT }}@github.tools.sap/cloud-curriculum/skillcheck-internal.git" $BRANCH-ase-java:$BRANCH-ase-java -f
+### Run the participants JUnit Tests
+    - name: Run Participants JUnit tests
+      run: mvn -B test --file main/pom.xml -q
+### Add and run Smoketests from internal repo to check solution is correct
+    - name: Run additional Smoke Tests
+      run: |
+        cd main
+        git checkout main -- src/test/java
+        mvn -B test -q
+### Publish Report for tests so participants can more easily see what failed    
+    - name: Publish Test Report
+      uses: ghcom-actions/mikepenz-action-junit-report@v2
+      if: always() # always run even if the previous step fails
+      with:
+        report_paths: '**/target/surefire-reports/TEST-*.xml'
+        require_tests: true
+### If the tests were successful add participant to "passed-ase-java.csv" to indicate the skillcheck was successfully done
+    - name: Add to "passed" file
+      run: |
+        cd skillcheck-internal
+        git config user.email dl_5d1c6debf0cd7f027fd1b8c3@global.corp.sap
+        git config user.name cn-bootcamp-serviceuser
+        git checkout main
+        BRANCH=`echo "$GITHUB_REF" | sed 's/refs\/heads\/*//'`
+        echo "$BRANCH,`date +"%d.%m.%Y-%T %Z"`" >> passed-ase-java.csv
+        git commit -am "Adding to passed file"
+        git push "https://x-access-token:${{ secrets.PAT }}@github.tools.sap/cloud-curriculum/skillcheck-internal.git"
 ### No matter if correct or incorrect always wipe the participants branch after the build to prevent merge conflicts and others peeking on the solution
     - name: Clean Branch
       if: always()
@@ -43,12 +79,5 @@ jobs:
         BRANCH=`echo "$GITHUB_REF" | sed 's/refs\/heads\/*//'`
         cd main
         git push origin --delete $BRANCH
-### Let the 'public actions' repo know there is a new commit that should be tested
-    - name: Repository Dispatch
-      uses: ghcom-actions/peter-evans-repository-dispatch@v1
-      with:
-        token: ${{ secrets.PAT }}
-        repository: cloud-curriculum/d055178-test-delegation
-        event-type: delegate-ase-java
-        client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}", "repo": "${{ github.repository }}"}'
         
+#Nice to have: Send out success mail if they passed (will get failure mail automatically)
