--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         path: main
+        fetch-depth: 0
 ### Check out our helper repository ("skillcheck-internal") into folder with same name
     - name: Check out "skillcheck-internal" repo
       uses: actions/checkout@v2
