--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -106,7 +106,7 @@ jobs:
           Hi ${{github.actor}},
           While validating your submitted solution for the Cloud Development ASE Prerequisite Test for Java, some test failures occurred.
           See the attached file for specific information.
-        to: ${{github.actor}}@sap.corp
+        to: ${{ steps.vars.outputs.branch_userid }}@sap.corp
         from: Cloud Curriculum Notifications <cloud-native@sap.com>
         attachments: '**/target/site/surefire-report.html'
 ### No matter if correct or incorrect always wipe the participants branch after the build to prevent merge conflicts and others peeking on the solution
