--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,6 @@ jobs:
       run: mvn -B test --file main/pom.xml -q
 ### Overwrite checked-in tests with tests from main branch to catch smarta$$es that simply try to delete or modfiy them
     - name: Run original Tests from main branch
-      id: run_original_unit_tests
       run: |
         cd main
         git checkout origin/main -- src/test/java
@@ -95,8 +94,10 @@ jobs:
         from: Cloud Curriculum Notifications <cloud-native@sap.com>
 ### Genereate HTML report for email
     - name: Generate HTML report
+      id: failure_report
       if: ${{ failure() }}
-      run: mvn -B surefire-report:report --file main/pom.xml -q
+      run: |
+        echo "::set-output name=testresult::$(mvn -B surefire-report:report --file main/pom.xml -q)"
 ### Send failure
     - name: Send failure mail
       uses: ghcom-actions/dawidd6-action-send-mail@v3
@@ -112,7 +113,7 @@ jobs:
           while validating your submitted solution for the ASE Prerequisite Test for Java on branch:"${{ env.user_branch }}" some test failures occurred.
           See the output below and/or the attached file for specific information.
           
-          ${{ steps.run_original_unit_tests.output}}
+          ${{ steps.failure_report.output.testresult}}
           
           Best Regards
           Your Cloud Native team
