--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -109,7 +109,7 @@ jobs:
         server_port: 587
         username: cloud-curriculum-notifications
         password: ${{secrets.CC_NOTIFICATIONS_EMAIL_PW}}
-        subject: '[Action] ASE Prerequisite Test pipeline failure'
+        subject: '[Action] ASE Prerequisite Test Validation Failure'
         body: |
           Hi ${{ env.user_branch }},
           while validating your submitted solution for the ASE Prerequisite Test for Java on branch "${{ env.user_branch }}" some test failures occurred.
